# massive-context-mcp

./: CHANGELOG.md  README.md  manifest.json  mcp_config.json  pyproject.toml  server.json
.github/workflows/: release.yml  semantic-release.yml  test.yml
src/: rlm_mcp_server.py
tests/: test_ollama_setup.py  test_server.py
